<resources>

    <string name="app_name">Krowd</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="krowd_welcome">Welcome to Krowd</string>
    <string name="description">the location based attendance taker!</string>
    <string name="sign_up">Sign Up</string>
    <string name="about">About</string>
    <string name="i_am_a">I am a ...</string>
    <string name="student">Student</string>
    <string name="instructor_professor">Instructor/Professor</string>
    <string name="create_your_krowd_account">Create your Krowd account</string>
    <string name="submit">Submit</string>
    <string name="course">Course</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="user_name_same_as_your_name">User Name (Same as your first name)</string>
    <string name="login">Login</string>
    <string name="log_in_string">Log In</string>
    <string name="email">Email</string>
    <string name="bio">CS 4540 Android Development
        \n ---------------------------------
    \nCS 3801 Societal and Ethical issues in Computing
        \n ---------------------------------
    \nCS 3035 Programming Language Paradigms
        \n ---------------------------------
    \nCS 5035 TOPICS IN FUNCTIONAL PROGRAMMING
        \n ---------------------------------
    \nCS 4551 MULTIMEDIA SOFTWARE SYSTEMS
        \n ---------------------------------
    </string>
    <string name="Krowd">Krowd</string>
    <string name="SignUp">Sign Up</string>
    <string name="Add">Add</string>
    <string name="description_course">Course Description</string>
    <string name="BackToHome">Back To Home</string>
    <string name="backTo">To Home</string>
    <string name="deleteCourse">Delete Course</string>
    <string name="startAttendance">Start Attendance</string>
    <string name="attendance">Take Attendance</string>
    <string name="back">Back To Home</string>
    <string name="seeResult">See Attendance Result</string>
    <string name="share">Share Result</string>
    <string name="showresult">Show Attendance</string>
    <string name="drop">Drop This Course</string>
    <string name="aboutPage">Krowd is an attendance app that can be used by teachers to record the daily
        attendance based on location. If student is not within certain ranges of distance, they will not be able to take the attendance.
    </string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


</resources>
