<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/mainbackground"
        tools:context=".signUpStudent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="@dimen/margin_wide"
            android:layout_marginBottom="16dp"

            android:fontFamily="casual"
            android:text="@string/log_in_string"
            android:textColor="#FD0A0A0A"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.055" />

        <EditText
            android:id="@+id/simpleEditText"
            android:layout_width="370dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="532dp"
            android:background="@drawable/rect_textedit"
            android:fontFamily="casual"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/simpleEditText3"
            android:layout_width="370dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="480dp"
            android:background="@drawable/rect_textedit"
            android:fontFamily="casual"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.36"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleEditText" />


        <Button

            android:id="@+id/button"
            android:layout_width="266dp"
            android:layout_height="39dp"
            android:layout_marginBottom="284dp"
            android:background="#03A9F4"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/simpleEditText3"
            app:layout_constraintVertical_bias="0.796"
            tools:text="@string/login" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>