<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/book_stack"
        tools:context=".signUpStudent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="318dp"
            android:layout_height="520dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#66ffffff"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView"
                android:layout_width="309dp"
                android:layout_height="49dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="@dimen/margin_wide"
                android:layout_marginBottom="16dp"

                android:fontFamily="casual"
                android:text="@string/create_your_krowd_account"
                android:textColor="#FD0A0A0A"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.043" />

            <EditText
                android:id="@+id/simpleEditText"
                android:layout_width="287dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"

                android:fontFamily="casual"
                android:hint="First Name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/simpleEditText3"
                android:layout_width="287dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"

                android:fontFamily="casual"
                android:hint="Last Name"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/simpleEditText4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/simpleEditText"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/simpleEditText4"
                android:layout_width="287dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="344dp"

                android:fontFamily="casual"
                android:hint="@string/email"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/simpleEditText6"
                android:layout_width="287dp"
                android:layout_height="37dp"
                android:layout_marginStart="16dp"

                android:fontFamily="casual"
                android:hint="@string/password"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="#10100F"
                android:textSize="10sp"
                app:layout_constraintBottom_toTopOf="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/simpleEditText4"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/button"
                android:layout_width="266dp"
                android:layout_height="39dp"
                android:layout_marginTop="309dp"
                android:layout_marginBottom="132dp"
                android:alpha="0.65"
                android:background="#03A9F4"
                android:text="@string/SignUp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/simpleEditText3"
                app:layout_constraintVertical_bias="1.0"
                tools:text="@string/sign_up" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>