<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/course"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AttendancePage"
       >


        <TextView
            android:id="@+id/courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="72dp"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/courseDescrp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/professorName" />

        <Button
            android:id="@+id/attendance"
            android:layout_width="155dp"
            android:layout_height="46dp"
            android:background="#03A9F4"
            android:alpha="0.65"
            android:text="@string/attendance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseDescrp"
            app:layout_constraintVertical_bias="0.522" />

        <Button
            android:id="@+id/dropClass"
            android:layout_width="155dp"
            android:layout_height="46dp"
            android:layout_marginTop="8dp"
            android:background="#03A9F4"
            android:alpha="0.65"
            android:text="@string/drop"
            app:layout_constraintBottom_toTopOf="@+id/backToHome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendance"
            app:layout_constraintVertical_bias="0.354" />

        <Button
            android:id="@+id/backToHome"
            android:layout_width="155dp"
            android:layout_height="46dp"
            android:background="#03A9F4"
            android:alpha="0.65"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendance"
            app:layout_constraintVertical_bias="0.41" />

        <TextView
            android:id="@+id/professorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/courseDescrp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseName" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>