<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout

        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/screen"
        tools:context=".MainActivity"
       >



        <ImageView
            android:id="@+id/bookIconImageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:contentDescription="@null"
            android:src="@drawable/logo"
            />

        <ProgressBar
            android:id="@+id/loadingProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true"
            android:foregroundGravity="bottom"
            android:indeterminate="true"
            android:padding="0dp"

             />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/afterAnimation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/book_stack"
            android:visibility="gone"
            >


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="354dp"
                android:layout_height="487dp"
                android:background="#73ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Student"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.804"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.82" />


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:layout_marginRight="@dimen/margin_wide"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="casual"
                    android:text="@string/krowd_welcome"
                    android:textColor="#FD0A0A0A"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_bias="0.512"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.335" />

                <View
                    style="@style/Divider.Horizontal"
                    android:layout_marginTop="40dp"
                    app:layout_constraintBottom_toTopOf="@+id/switch1"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.0"
                    tools:layout_editor_absoluteX="0dp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_wide"
                    android:layout_marginBottom="16dp"
                    android:fontFamily="casual"
                    android:text="@string/description"
                    android:textColor="#FD0C0B0B"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.443" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="266dp"
                    android:layout_height="39dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="116dp"
                    android:alpha="0.65"
                    android:background="#03A9F4"
                    android:text="@string/sign_up"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="@string/sign_up" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="serif-monospace"
                    android:textColor="#050505"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintHorizontal_bias="0.81"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    app:layout_constraintVertical_bias="0.434" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="266dp"
                    android:layout_height="39dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:alpha="0.65"
                    android:background="#03A9F4"
                    android:text="@string/log_in"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</layout>